# joetendo

./: README.md  adding_games.md  ipac.rst
killswitch/: code.py
scripts/: deploy.sh
steam/: README.rst  common  install_old  kiosk  kiosk-launcher  pyproject.toml  setup.cfg  vent  vent_old
steam/keymaps/: 1100140.conf  1420180.conf  221640.conf  253750.conf  314180.conf  360740.conf  377860.conf  439490.conf  464450.conf  809020.conf
steam/lib/: common.py  keycfg.py  lolfiglet.py  setup.py  startup.py
steam/menu/: Blue Revolver.sh  DeathSmiles.sh  DoDonPachi.sh  Downwell.sh  Ikaruga.sh  Mushihimesama.sh  Super Hexagon.sh  Touhou Fuujinroku ~ Mountain of Faith.sh  Touhou Kaeizuka ~ Phantasmagoria of Flower View.disabled  Trouble Witches Origin.disabled  ZeroRanger.sh
steam/steamvent/: common.py  install.py  keycfg.py  keymap.json  launcher.py  lolfiglet.py  retroarch_map.json  startup.py  valve.py
