[metadata]
name = steamvent
version = 0.0.0
author = nago
author_email = nago@lowellmakes.com
maintainer = nago
maintainer_email = nago@lowellmakes.com
url = https://github.com/LowellMakes/joetendo
project_urls =
    Homepage = https://github.com/LowellMakes/joetendo
    Documentation = https://github.com/LowellMakes/joetendo
    Changelog = https://github.com/LowellMakes/joetendo
    Issues = https://github.com/LowellMakes/joetendo/-/issues
    Source = https://github.com/LowellMakes/joetendop
description = Joseph Tendo
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: System :: Emulators

[options]
python_requires = >= 3.12
packages =
    steamvent

[options.extras_require]

[options.entry_points]
console_scripts =
    kiosk = steamvent.startup:kiosk
    kiosk-launcher = steamvent.startup:kiosk_launcher
    vent-installer = steamvent.install:main


[flake8]
# Prefer pylint's bare-except checks to flake8's
extend-ignore = E722
exclude = __pycache__,

[mypy]

[isort]
force_grid_wrap=4
force_sort_within_sections=True
include_trailing_comma=True
line_length=72
lines_after_imports=2
multi_line_output=3
